--- a/index.html
+++ b/index.html
@@ -5,29 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Simona's Cat Calculator</title>
 </head>
 
 <body>
-    <div class="calculator-container">
-        <div class="button-container">
-            <div class="cat equals"></div>
-            <div class="cat plus"></div>
-            <div class="cat minus"></div>
-            <div class="cat divide"></div>
-            <div class="cat multiply"></div>
-            <div class="cat clear"></div>
-            <div class="cat one"></div>
-            <div class="cat two"></div>
-            <div class="cat three"></div>
-            <div class="cat four"></div>
-            <div class="cat five"></div>
-            <div class="cat six"></div>
-            <div class="cat seven"></div>
-            <div class="cat eight"></div>
-            <div class="cat nine"></div>
-            <div class="cat zero"></div>
-            <div class="cat decimal"></div>
+    <div class="calculator-main-container">
+        <div class="calculator-container">
+            <div class="button-main-container">
+                <div class="button-container">
+                    <div class="cat equals">
+                        <p class="icon">=</p>
+                    </div>
+                    <div class="cat plus">
+                        <p class="icon">+</p>
+                    </div>
+                    <div class="cat minus">
+                        <p class="icon">-</p>
+                    </div>
+                    <div class="cat divide">
+                        <p class="icon">/</p>
+                    </div>
+                    <div class="cat multiply">
+                        <p class="icon">*</p>
+                    </div>
+                    <div class="cat clear">
+                        <p class="icon">C</p>
+                    </div>
+                    <div class="cat one">
+                        <p class="icon">1</p>
+                    </div>
+                    <div class="cat two">
+                        <p class="icon">2</p>
+                    </div>
+                    <div class="cat three">
+                        <p class="icon">3</p>
+                    </div>
+                    <div class="cat four">
+                        <p class="icon">4</p>
+                    </div>
+                    <div class="cat five">
+                        <p class="icon">5</p>
+                    </div>
+                    <div class="cat six">
+                        <p class="icon">6</p>
+                    </div>
+                    <div class="cat seven">
+                        <p class="icon">7</p>
+                    </div>
+                    <div class="cat eight">
+                        <p class="icon">8</p>
+                    </div>
+                    <div class="cat nine">
+                        <p class="icon">9</p>
+                    </div>
+                    <div class="cat zero">
+                        <p class="icon">0</p>
+                    </div>
+                    <div class="cat decimal">
+                        <p class="icon">.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
