Added an interactive layer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <div class="calculator-main-container">
         <div class="calculator-container">
             <div class="button-main-container">
+                <div class="interaction-container">
+                    <div id="clear"></div>
+                    <div id="divide"></div>
+                    <div id="multiply"></div>
+                    <div id="minus"></div>
+                    <div id="seven"></div>
+                    <div id="eight"></div>
+                    <div id="nine"></div>
+                    <div id="plus"></div>
+                    <div id="four"></div>
+                    <div id="five"></div>
+                    <div id="six"></div>
+                    <div id="equals"></div>
+                    <div id="one"></div>
+                    <div id="two"></div>
+                    <div id="three"></div>
+                    <div id="zero"></div>
+                    <div id="decimal"></div>
+                </div>
                 <div class="button-container">
                     <div class="cat equals">
                         <p class="icon">=</p>
