--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <title>Simona's Cat Calculator</title>
 </head>
 
 <body>
     <div class="calculator-main-container">
         <div class="calculator-container">
+            <div class="answer-screen-main-container">
+                <div class="sun-box"></div>
+                <div class="answer-screen-display" id="answer"></div>
+            </div>
             <div class="button-main-container">
                 <div class="interaction-container">
                     <div id="clear"></div>
